# aptiv_gtest

./: .gitignore  CMakeLists.txt
Factorial_gtest_code/: CMakeLists.txt
Factorial_gtest_code/src/: factorial.cpp  factorial.h  main.cpp
Factorial_gtest_code/tests/: test_factorial.cpp
python_code/: app.py
test/: test_factorial.cpp
